syntax = "proto3";

package snp.v1;
option go_package = ".;pb";

import "google/protobuf/wrappers.proto";
import "music_type.proto";
import "common.proto";


message ProtoImportMusicRepo {
  message ImportMusic {
    uint64   id        = 1;
    string   file_name  = 2;
    uint64   file_size   = 3;
    string   hash      = 4;
    string   artist     = 5;
    string   title     = 6;
    string  album    = 7;
    string  genre      = 8;
    uint64  duration     = 9;
    optional bool selected = 10;
  }

  message SearchResponse {
    repeated ImportMusic data = 1;
    uint32 total_records = 2;
    repeated ProtoMusicTypeRepo.ProtoMusicType music_types = 3;
  }
}

service ImportMusicCrud {
  rpc SearchImportMusic(SearchRequest) returns (ProtoImportMusicRepo.SearchResponse);
  rpc ImportMusicByIds(Ids) returns (google.protobuf.BoolValue);
  rpc ImportMusicToMusicTypeByMusicTypeId(google.protobuf.UInt64Value) returns (google.protobuf.BoolValue);
}

